--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,10 +4,28 @@ on:
     branches: [ deploy-trading ]
 
 jobs:
+  continuous-integration:
+    runs-on: ubuntu-latest
+    steps:
+      # Step 1
+      - uses: actions/checkout@v2
+      # Step 2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'zulu'
+      # Step 3
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
 
+      - name: Execute Gradle test
+        run: ./gradlew test
 
+    
   continuous-deployment:
     runs-on: ubuntu-latest
+    needs: [continuous-integration]
     if: github.ref == 'refs/heads/deploy-trading'
     steps:
       - name: Execute Gradle build
