--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,22 +22,21 @@ jobs:
       - name: Execute Gradle test
         run: ./gradlew test
 
+      - name: Execute Gradle build
+        run: ./gradlew shadowJar
+
+      
 
   continuous-deployment:
     runs-on: ubuntu-latest
     needs: [continuous-integration]
     if: github.ref == 'refs/heads/deploy-trading'
     steps:
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
-      - name: Execute Gradle build
-        run: ./gradlew shadowJar
       - name: Upload JAR
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: build
+          path: target/esop-trading-0.1-all.jar
       - name: Download JAR
         uses: actions/download-artifact@v2
         with:
