--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: target/build/libs/esop-0.1-all.jar
+          path: build/libs/esop-0.1-all.jar
       - name: Download JAR
         uses: actions/download-artifact@v2
         with:
