--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,13 @@ jobs:
       - name: Execute Gradle build
         run: ./gradlew shadowJar
 
+
+
+  continuous-deployment:
+    runs-on: ubuntu-latest
+    needs: [continuous-integration]
+    if: github.ref == 'refs/heads/deploy-trading'
+    steps:
       - name: Upload JAR
         uses: actions/upload-artifact@v2
         with:
@@ -35,7 +42,7 @@ jobs:
         with:
           name: artifact
       - name: deploy to server
-        uses: easingthemes/ssh-deploy@main
+        uses: easingthemes/ssh-deploy@trading-deploy
         env:
           SSH_PRIVATE_KEY: ${ { secrets.EC2_SSH_KEY }}
           REMOTE_HOST: ${ { secrets.HOST_DNS }}
