--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
 
   continuous-deployment:
-    runs-on: ubuntu-oldest
+    runs-on: ubuntu-latest
     needs: [continuous-integration]
     if: github.ref == 'refs/heads/deploy-trading'
     steps:
@@ -42,9 +42,10 @@ jobs:
         with:
           name: artifact
       - name: deploy to server
-        uses: kajalp238/esop-trading@deploy-trading
-        env:
-          SSH_PRIVATE_KEY: ${ { secrets.EC2_SSH_KEY }}
-          REMOTE_HOST: ${ { secrets.HOST_DNS }}
-          REMOTE_USER: ${ { secrets.USERNAME }}
-          TARGET: build/libs/esop-0.1-all.jar
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.HOST_DNS }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: whoami
+
