--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,19 +19,12 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Execute Gradle test
-        run: ./gradlew test
+#      - name: Execute Gradle test
+#        run: ./gradlew test
 
       - name: Execute Gradle build
         run: ./gradlew shadowJar
 
-
-
-  continuous-deployment:
-    runs-on: ubuntu-latest
-    needs: [continuous-integration]
-    if: github.ref == 'refs/heads/deploy-trading'
-    steps:
       - name: Upload JAR
         uses: actions/upload-artifact@v2
         with:
@@ -41,6 +34,13 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: artifact
+
+  continuous-deployment:
+    runs-on: ubuntu-latest
+    needs: [continuous-integration]
+    if: github.ref == 'refs/heads/deploy-trading'
+    steps:
+      
       - name: deploy to server
         uses: appleboy/ssh-action@v0.1.7
         with:
