--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   continuous-integration:
     runs-on: ubuntu-latest
+    permissions: 
+      contents: read
+      packages: write
     steps:
       # Step 1
       - uses: actions/checkout@v2
@@ -39,8 +42,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [continuous-integration]
     if: github.ref == 'refs/heads/deploy-trading'
+    permissions:
+      contents: read
+      packages: write
     steps:
-      
+
       - name: deploy to server
         uses: appleboy/ssh-action@v0.1.7
         with:
