--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,14 +44,13 @@ jobs:
           name: artifact
 
       - name: copy jar file
-        
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST_DNS }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: artifact
-          target: "test"
+          source: "build/libs/esop-0.1-all.jar"
+          target: "/"
     
       - name: deploy to server
         uses: appleboy/ssh-action@v0.1.7
