--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1
       - uses: actions/checkout@v2
-      # Step 2
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'zulu'
-      # Step 3
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-#      - name: Execute Gradle test
-#        run: ./gradlew test
+      - name: Execute Gradle test
+        run: ./gradlew test
 
       - name: Execute Gradle build
         run: ./gradlew shadowJar
@@ -36,21 +33,28 @@ jobs:
   continuous-deployment:
     runs-on: ubuntu-latest
     needs: [continuous-integration]
-    if: github.ref == 'refs/heads/deploy-trading'
     steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'zulu'
+
       - name: Download JAR
         uses: actions/download-artifact@v2
         with:
           name: artifact
 
-#      - name: copy jar file
-#        uses: appleboy/scp-action@master
-#        with:
-#          host: ${{ secrets.HOST_DNS }}
-#          username: ${{ secrets.USERNAME }}
-#          key: ${{ secrets.EC2_SSH_KEY }}
-#          source: "./*"
-#          target: "/"
+      - name: copy jar file
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST_DNS }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "esop-0.1-all.jar"
+          target: "/"
 
       - name: deploy to server
         uses: appleboy/ssh-action@v0.1.7
