--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ on:
 jobs:
   continuous-integration:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
@@ -41,7 +40,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'zulu'
-
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        
       - name: Download JAR
         uses: actions/download-artifact@v2
         with:
