--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
-          distribution: 'zulu'
+          java-version: 17
+          distribution: zulu
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
@@ -38,11 +38,12 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
-          distribution: 'zulu'
+          java-version: 17
+          distribution: zulu
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-        
+
       - name: Download JAR
         uses: actions/download-artifact@v2
         with:
