--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,15 +7,15 @@ on:
     branch: "vaishnavi"
 
 jobs:
-  runs-on: ubuntu-latest
-  name: test
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Setup java
-      uses: actions/setup-java@v3
-      with:
-        distribution: corretto
-        java-version: 18
-    - name: Test
-      run: ./gradlew test
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: 18
+      - name: Test
+        run: ./gradlew test
