--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,3 +19,16 @@ jobs:
           java-version: 18
       - name: Test
         run: ./gradlew test
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: 18
+      - name: Build
+        run: ./gradlew build
