--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Copy jar file to artifacts
         uses: actions/upload-artifact@v3
         with:
+          name: esop-trading
           path: build/libs/esop-0.1-all.jar
 
 
