--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,6 +36,6 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: esop-trading
-          path: build/libs/esop-0.1-all.jar
+          path: build/libs/
 
 
