--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,8 +23,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - trigger:
+          branch: "vaishnavi"
       - name: Setup java
         uses: actions/setup-java@v3
         with:
@@ -37,5 +37,8 @@ jobs:
         with:
           name: esop-trading-1.0
           path: build/libs/esop-0.1-all.jar
+
+
+
 
 
