--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,8 +23,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - trigger:
-          branch: "vaishnavi"
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Setup java
         uses: actions/setup-java@v3
         with:
@@ -37,6 +37,22 @@ jobs:
         with:
           name: esop-trading-1.0
           path: build/libs/esop-0.1-all.jar
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download jar file
+        uses: actions/download-artifact@v3
+        with:
+          name: esop-trading-1.0
+      - name: Copy jar file to ec2 instance
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          run: |
+            eval `ssh-agent`
+            echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+            scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
 
 
 
