Make deployment sequential

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,6 +39,7 @@ jobs:
           path: build/libs/esop-0.1-all.jar
 
   deploy:
+    needs: "build"
     runs-on: ubuntu-latest
     steps:
       - name: Download jar file
