--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,6 +42,11 @@ jobs:
     needs: "build"
     runs-on: ubuntu-latest
     steps:
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+            distribution: corretto
+            java-version: 17
       - name: Download jar file
         uses: actions/download-artifact@v3
         with:
