--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -60,7 +60,7 @@ jobs:
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
             scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
       - name: Run
-        run: sudo java -jar esop-0.1-all.jar
+        run: ssh -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "sudo java -jar esop-0.1-all.jar"
 
 
 
