--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v3
         with:
-            distribution: corretto
-            java-version: 17
+          distribution: corretto
+          java-version: 17
       - name: Download jar file
         uses: actions/download-artifact@v3
         with:
@@ -56,12 +56,21 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
           SSH_HOST: ${{ secrets.SSH_HOST }}
         run: |
-            eval `ssh-agent`
-            echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
-            scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
-            kill -9 $(lsof -t -i:80) 
-            kill -9 $(lsof -t -i:8080) 
-            ssh -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "sudo java -jar esop-0.1-all.jar"
+          eval `ssh-agent`
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+          scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
+          #!/bin/bash
+
+          pid=$(sudo lsof -n -i :80 -sTCP:LISTEN -t)
+  
+          if [ -n "$pid" ]; then
+            sudo kill "$pid"
+          fi
+  
+          sudo MICRONAUT_SERVER_PORT=80 nohup java -jar esop-0.1-all.jar >/dev/null 2>&1 &
+  
+          exit
+  
 
 
 
