--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,1 +1,73 @@
+name: test-build-deploy
+
+on:
+  push:
+    branch: "kajal"
+  pull_request:
+    branch: "kajal"
+
+env:
+  SSH_PRIVATE_KEY: ${{ secrets.KAJAL_EC2_SSH_KEY }}
+  SSH_HOST: ${{ secrets.KAJAL_SSH_HOST }}
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: 17
+      - name: Test
+        run: ./gradlew test
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: 17
+      - name: Build
+        run: ./gradlew build
+      - name: Copy jar file to artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: esop-trading-1.0
+          path: build/libs/esop-0.1-all.jar
+
+  deploy:
+    needs: "build"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: 17
+      - name: Download jar file
+        uses: actions/download-artifact@v3
+        with:
+          name: esop-trading-1.0
+      - name: Run application
+        with:
+          script: |
+            scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
+            pid=$(sudo lsof -n -i :80 -sTCP:LISTEN -t)
+            if [ -n "$pid" ]; then
+              sudo kill "$pid"
+            fi
+            sudo MICRONAUT_SERVER_PORT=80 nohup java -jar esop-0.1-all.jar >/dev/null 2>&1 &
+    
+      
+  
+
+
+
 
