--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,13 +2,9 @@ name: test-build-deploy
 
 on:
   push:
-    branch: "kajal"
+    branch: "vaishnavi"
   pull_request:
-    branch: "kajal"
-
-env:
-  SSH_PRIVATE_KEY: ${{ secrets.KAJAL_EC2_SSH_KEY }}
-  SSH_HOST: ${{ secrets.KAJAL_SSH_HOST }}
+    branch: "vaishnavi"
 
 jobs:
   test:
@@ -55,21 +51,24 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: esop-trading-1.0
-      - name: Run application
+      - name: Copy jar file to ec2 instance
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
         run: |
+          eval `ssh-agent`
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
           scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
         with:
           script: |
-            
+
             pid=$(sudo lsof -n -i :80 -sTCP:LISTEN -t)
+    
             if [ -n "$pid" ]; then
               sudo kill "$pid"
             fi
+    
             sudo MICRONAUT_SERVER_PORT=80 nohup java -jar esop-0.1-all.jar >/dev/null 2>&1 &
     
-      
-  
-
-
-
+    
 
