--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -4,42 +4,35 @@ on:
   push:
     branches: [ "tf-deploy" ]
 
+permissions:
+  contents: read
+
 jobs:
   terraform:
+    
+    env:
+      TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
     runs-on: ubuntu-latest
     environment: dev
     defaults:
       run:
         shell: bash
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Terraform Format
+      run: terraform fmt -check
+
+    - name: Terraform Plan
+      run: terraform plan -input=false
+
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -input=false
       
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 1.4.2
-
-      - name: Terraform Init
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          args: |
-            init
-
-      - name: Terraform Plan
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          args: |
-            plan
-        env:
-          TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: Terraform Apply
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          args: |
-            apply -auto-approve
-        env:
-          TF_VAR_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          TF_VAR_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
