--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,12 @@ jobs:
     - name: Terraform Apply
       run: terraform apply -auto-approve -input=false
 
+    - name: Terraform Output
+      run: |
+        echo TEST=$(terraform output -raw private_key)
+        echo TEST1=$(terraform output instance_public_ip)
+        echo TEST2=$(terraform output instance_id)
+
   build:
     name: "build the application"
     runs-on: ubuntu-latest
