--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Terraform Output
       run: |
-        echo TEST=$(terraform output -raw private_key)
+        echo TEST=$(terraform output -raw private_key) >> $GITHUB_ENV
         echo TEST1=$(terraform output instance_public_ip)
         echo TEST2=$(terraform output instance_id)
         echo TEST3=$(terraform output instance_dns)
