--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Terraform Output
       run: |
         echo key=$(terraform output -raw private_key) >> $GITHUB_ENV
-        echo public_ip=$(terraform output instance_public_ip) >> $GITHUB_ENV
+        echo public_ip=$(terraform output instance_public_ip) >> $GITHUB_OUTPUT
         echo {{env.key}}
 
 
