github env setup

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ permissions:
 jobs:
   terraform:
     name: "terraform-job"
+    outputs:
+      key: ${{ steps.terraform_output.outputs.key }}
+      host: ${{ steps.terraform_output.outputs.public_ip }}
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -39,6 +42,7 @@ jobs:
       run: terraform apply -auto-approve -input=false
 
     - name: Terraform Output
+      id: terraform_output
       run: |
         echo key=$(terraform output -raw private_key) >> $GITHUB_OUTPUT
         echo public_ip=$(terraform output instance_public_ip) >> $GITHUB_OUTPUT
@@ -82,9 +86,10 @@ jobs:
           name: esop-trading-1.0
       - name: Copy jar file to ec2 instance
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.KAJAL_EC2_SSH_KEY }}
-          SSH_HOST: ${{ secrets.KAJAL_SSH_HOST }}
+          SSH_PRIVATE_KEY: ${{needs.terraform.outputs.key}}
+          SSH_HOST: ${{ needs.terraform.outputs.private_ip }}
         run: |
+            echo SSH_PRIVATE_KEY
             eval `ssh-agent`
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
             scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
