--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,8 +91,8 @@ jobs:
             eval `ssh-agent`
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' > gurukul-key.pem
             chmod 400 gurukul-key.pem
-            ssh -i gurukul-key.pem -o StrictHostKeyChecking=no ec2-user@$SSH_HOST:~
+            ssh -i -tt gurukul-key.pem -o StrictHostKeyChecking=no ec2-user@$SSH_HOST
             echo "before copy"
-            scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
+            scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST
             ssh -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "java -jar esop-0.1-all.jar"
       
