--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,19 @@ jobs:
           name: esop-trading-1.0
           path: build/libs/esop-0.1-all.jar
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: 17
+      - name: Test
+        run: ./gradlew test
+
   deploy:
     name: "deploy the application"
     runs-on: ubuntu-latest
@@ -86,16 +99,11 @@ jobs:
       - name: Copy jar file to ec2 instance
         env:
           SSH_PRIVATE_KEY: ${{needs.terraform.outputs.key}}
-          SSH_HOST: ${{ needs.terraform.outputs.host }}
+          SSH_HOST: ${{ needs.terraform.outputs.private_ip }}
         run: |
+
             eval `ssh-agent`
-            echo "gurukul"
-            echo "$SSH_PRIVATE_KEY" | tr -d '\r' > gurukul-key.pem
-            echo "gurukul1"
-            chmod 400 gurukul-key.pem
-            echo "gurukul2"
-            ssh -tt -i gurukul-key.pem -o StrictHostKeyChecking=no ec2-user@$SSH_HOST
-            echo "before copy"
-            scp -i gurukul-key.pem -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST
-            ssh -i gurukul-key.pem -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "java -jar esop-0.1-all.jar"
+            echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+            scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
+            ssh -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "java -jar esop-0.1-all.jar"
       
