--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,14 +96,22 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: esop-trading-1.0
-      - name: Copy jar file to ec2 instance
-        env:
-          SSH_PRIVATE_KEY: ${{needs.terraform.outputs.key}}
-          SSH_HOST: ${{ needs.terraform.outputs.private_ip }}
-        run: |
 
-            eval `ssh-agent`
-            echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
-            scp -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
+      - name: copy jar file
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ needs.terraform.outputs.host }}
+          username: "ec2-user"
+          key: ${{needs.terraform.outputs.key}}
+          source: "esop-0.1-all.jar"
+          target: "./app"
+
+      - name: deploy to server
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ needs.terraform.outputs.host }}
+          username: "ec2-user"
+          key: ${{needs.terraform.outputs.key}}
+          script: |
+            cd app
             ssh -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "java -jar esop-0.1-all.jar"
-      
