--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,7 +102,7 @@ jobs:
       - name: copy jar file
         uses: appleboy/scp-action@master
         with:
-          host: ${{ needs.terraform.outputs.host }}
+          host: ${{ secrets.KAJAL_SSH_HOST }}
           username: "ec2-user"
           key: ${{secrets.KAJAL_EC2_SSH_KEY}}
           source: "esop-0.1-all.jar"
@@ -111,7 +111,7 @@ jobs:
       - name: deploy to server
         uses: appleboy/ssh-action@v0.1.7
         with:
-          host: ${{ needs.terraform.outputs.host }}
+          host: ${{ secrets.KAJAL_SSH_HOST }}
           username: "ec2-user"
           key: ${{secrets.KAJAL_EC2_SSH_KEY}}
           script: |
