--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,4 +115,4 @@ jobs:
           username: "ec2-user"
           key: ${{secrets.KAJAL_EC2_SSH_KEY}}
           script: |
-            ssh -o StrictHostKeyChecking=no ec2-user@$host -t "java -jar app/esop-0.1-all.jar"
+            echo "ssh"
