--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,9 +107,11 @@ jobs:
             eval `ssh-agent`
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
             scp -T -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
-            ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "java -jar esop-0.1-all.jar"
             ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "curl -s 'https://get.sdkman.io' | bash"
             ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "source '$HOME/.sdkman/bin/sdkman-init.sh'"
             ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "echo sdk version"
+
+            # ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "java -jar esop-0.1-all.jar"
+            
 
       
