--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,9 +108,8 @@ jobs:
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
             scp -T -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
             ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "curl -s 'https://get.sdkman.io' | bash"
-            ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "echo sdk version"
             ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "sdk install java 17.0.6-amzn"
-            ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "sudo MICRONAUT_SERVER_PORT=80 nohup java -jar esop-0.1-all.jar"
+            ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "sudo MICRONAUT_SERVER_PORT=80 nohup java -jar esop-0.1-all.jar > /dev/null"
             
 
       
