--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,10 +106,11 @@ jobs:
 
             eval `ssh-agent`
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+            ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "kill -9 $(lsof -t -i:8080)"          
             scp -T -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
             ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "curl -s 'https://get.sdkman.io' | bash"
             ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "sdk install java 17.0.6-amzn"
-            ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "MICRONAUT_SERVER_PORT=80 nohup java -jar esop-0.1-all.jar > /dev/null"
+            ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "nohup java -jar esop-0.1-all.jar > /dev/null"
             
 
       
