--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,6 @@ jobs:
         with:
           name: esop-trading-1.0
           path: build/libs/esop-0.1-all.jar
-
   test:
     runs-on: ubuntu-latest
     steps:
@@ -106,7 +105,7 @@ jobs:
 
             eval `ssh-agent`
             echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
-            ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "kill -9 $(lsof -t -i:8080)"          
+            ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "fuser -k 8080/tcp"          
             scp -T -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
             ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "curl -s 'https://get.sdkman.io' | bash"
             ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t "sdk install java 17.0.6-amzn"
