--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Terraform Init
-      run: terraform init
+      run: terraform init -backend-config=backend.conf
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
