--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,4 +1,4 @@
-name: order-service
+name: Demo
 
 on:
   push:
@@ -6,8 +6,110 @@ on:
 
 jobs:
   terraform:
+    name: "terraform-job"
+    outputs:
+      host: ${{ steps.terraform_output.outputs.public_ip }}
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
     runs-on: ubuntu-latest
-    name: "order-checkout"
+    environment: dev
+    defaults:
+      run:
+        shell: bash
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Terraform Init
+        run: terraform init -backend-config=backend.conf
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_wrapper: false
+
+      - name: Terraform Plan
+        run: terraform plan
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve -input=false
+
+      - name: Terraform Output
+        id: terraform_output
+        run: |
+          echo public_ip=$(terraform output instance_public_ip | tr -d '"') >> $GITHUB_OUTPUT
+
+
+  build:
+    name: "build the application"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: 17
+      - name: Build
+        run:
+          ./gradlew build
+      - name: Copy jar file to artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: esop-trading-1.0
+          path: build/libs/esop-0.1-all.jar
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: 17
+      - name: Test
+        run: ./gradlew test
+
+  deploy:
+    name: "deploy the application"
+    runs-on: ubuntu-latest
+    needs:
+      - terraform
+      - build
+      - test
+    steps:
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: corretto
+          java-version: 17
+      - name: Download jar file
+        uses: actions/download-artifact@v3
+        with:
+          name: esop-trading-1.0
+      - name: Copy jar file to ec2 instance
+        env:
+          SSH_PRIVATE_KEY: ${{secrets.KAJAL_EC2_SSH_KEY}}
+          SSH_HOST: ${{ needs.terraform.outputs.host }}
+        run: |
+          eval `ssh-agent`
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+          scp -T -o StrictHostKeyChecking=no "esop-0.1-all.jar" ec2-user@$SSH_HOST:~
+          echo "priv key"
+          ssh -T -o StrictHostKeyChecking=no ec2-user@$SSH_HOST -t '
+            pid=$(fuser 8080/tcp)
+            if [ $pid ]
+            then
+            fuser -k 8080/tcp
+            fi
+            curl -s 'https://get.sdkman.io' | bash
+            source "/.sdkman/bin/sdkman-init.sh"
+            sdk install java 17.0.6-amzn
+            java -jar esop-0.1-all.jar > /dev/null
+          '
