--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -2,7 +2,8 @@ name: Demo
 
 on:
   push:
-    branches: [ "order-service-refactoring" ]
+    branches: 
+      - order-service-refactoring
 
 jobs:
   terraform:
